data/derived/fa15/progs/unify/prog0271.ml.out
Characters 32-52:
  let stringOfList f l = sepConcat("", List.map(f, l));;
                                  ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
